objects/Store__c.object
<CustomObject>
    <fields>
        <fullName>Items__c</fullName>
        <label>Items</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Contact__c</fullName>
        <label>Store Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <label>Store Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>